--- a/ADReSSo21.ipynb
+++ b/ADReSSo21.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP6j6Gz2mh1ZGJnv/myNZTU",
+      "authorship_tag": "ABX9TyMS7b4WLanKzysa1XtTW/BW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,12 +100,12 @@
         "print(\"\\nSTEP 2: Installing required packages...\")\n",
         "print(\"Installing speech recognition and audio processing libraries...\")\n",
         "\n",
-        "# Uncomment these lines to install packages (run once)\n",
-        "# !pip install SpeechRecognition\n",
-        "# !pip install pydub\n",
-        "# !pip install librosa\n",
-        "# !pip install soundfile\n",
-        "# !apt-get install -y ffmpeg\n",
+        "# Install packages (run once)\n",
+        "!pip install SpeechRecognition\n",
+        "!pip install pydub\n",
+        "!pip install librosa\n",
+        "!pip install soundfile\n",
+        "!apt-get install -y ffmpeg\n",
         "\n",
         "print(\"✓ Packages ready (make sure to install them first)\")\n",
         "\n",
@@ -481,7 +481,9 @@
             "✓ Output path: /content/drive/MyDrive/Voice/transcripts/\n",
             "\n",
             "STEP 4: Extracting dataset files...\n",
-            "  Extracting ADReSSo21-progression-train.tgz...\n"
+            "  Extracting ADReSSo21-progression-train.tgz...\n",
+            "  ✓ ADReSSo21-progression-train.tgz extracted successfully\n",
+            "  Extracting ADReSSo21-progression-test.tgz...\n"
           ]
         }
       ]
