EXTRACT DATASET FILES

--- a/ADReSSo21.ipynb
+++ b/ADReSSo21.ipynb
@@ -483,7 +483,47 @@
             "STEP 4: Extracting dataset files...\n",
             "  Extracting ADReSSo21-progression-train.tgz...\n",
             "  ✓ ADReSSo21-progression-train.tgz extracted successfully\n",
-            "  Extracting ADReSSo21-progression-test.tgz...\n"
+            "  Extracting ADReSSo21-progression-test.tgz...\n",
+            "  ✓ ADReSSo21-progression-test.tgz extracted successfully\n",
+            "  Extracting ADReSSo21-diagnosis-train.tgz...\n",
+            "  ✓ ADReSSo21-diagnosis-train.tgz extracted successfully\n",
+            "\n",
+            "STEP 5: Finding all WAV files...\n",
+            "  Found 15 decline WAV files\n",
+            "  Found 58 no_decline WAV files\n",
+            "  Found 32 test WAV files\n",
+            "  Found 87 AD WAV files\n",
+            "  Found 79 CN WAV files\n",
+            "\n",
+            "STEP 6: Setting up audio preprocessing...\n",
+            "\n",
+            "STEP 7: Setting up speech recognition...\n",
+            "\n",
+            "STEP 8: Processing audio files and extracting transcripts...\n",
+            "This may take a while depending on the number and length of audio files...\n",
+            "\n",
+            "  Processing progression training data...\n",
+            "    Processing 15 decline files...\n",
+            "      Processing 1/15: adrsp055.wav\n",
+            "      Processing 2/15: adrsp003.wav\n",
+            "      Processing 3/15: adrsp266.wav\n",
+            "      Processing 4/15: adrsp300.wav\n",
+            "      Processing 5/15: adrsp320.wav\n",
+            "      Processing 6/15: adrsp313.wav\n",
+            "      Processing 7/15: adrsp179.wav\n",
+            "      Processing 8/15: adrsp357.wav\n",
+            "      Processing 9/15: adrsp051.wav\n",
+            "      Processing 10/15: adrsp101.wav\n",
+            "      Processing 11/15: adrsp326.wav\n",
+            "      Processing 12/15: adrsp127.wav\n",
+            "      Processing 13/15: adrsp276.wav\n",
+            "      Processing 14/15: adrsp209.wav\n",
+            "      Processing 15/15: adrsp318.wav\n",
+            "    Processing 58 no_decline files...\n",
+            "      Processing 1/58: adrsp196.wav\n",
+            "      Processing 2/58: adrsp137.wav\n",
+            "      Processing 3/58: adrsp130.wav\n",
+            "      Processing 4/58: adrsp349.wav\n"
           ]
         }
       ]
