--- a/ADReSSo21.ipynb
+++ b/ADReSSo21.ipynb
@@ -457,7 +457,7 @@
         "id": "56RZ8BRdy4pM",
         "outputId": "59419cb2-f3c8-41e2-f915-5a84cd8c4a69"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,311 @@
             "      Processing 1/58: adrsp196.wav\n",
             "      Processing 2/58: adrsp137.wav\n",
             "      Processing 3/58: adrsp130.wav\n",
-            "      Processing 4/58: adrsp349.wav\n"
+            "      Processing 4/58: adrsp349.wav\n",
+            "      Processing 5/58: adrsp198.wav\n",
+            "      Processing 6/58: adrsp321.wav\n",
+            "      Processing 7/58: adrsp136.wav\n",
+            "      Processing 8/58: adrsp024.wav\n",
+            "      Processing 9/58: adrsp007.wav\n",
+            "      Processing 10/58: adrsp382.wav\n",
+            "      Processing 11/58: adrsp043.wav\n",
+            "      Processing 12/58: adrsp019.wav\n",
+            "      Processing 13/58: adrsp333.wav\n",
+            "      Processing 14/58: adrsp056.wav\n",
+            "      Processing 15/58: adrsp042.wav\n",
+            "      Processing 16/58: adrsp310.wav\n",
+            "      Processing 17/58: adrsp377.wav\n",
+            "      Processing 18/58: adrsp363.wav\n",
+            "      Processing 19/58: adrsp028.wav\n",
+            "      Processing 20/58: adrsp350.wav\n",
+            "      Processing 21/58: adrsp096.wav\n",
+            "      Processing 22/58: adrsp052.wav\n",
+            "      Processing 23/58: adrsp204.wav\n",
+            "      Processing 24/58: adrsp380.wav\n",
+            "      Processing 25/58: adrsp109.wav\n",
+            "      Processing 26/58: adrsp255.wav\n",
+            "      Processing 27/58: adrsp157.wav\n",
+            "      Processing 28/58: adrsp306.wav\n",
+            "      Processing 29/58: adrsp197.wav\n",
+            "      Processing 30/58: adrsp031.wav\n",
+            "      Processing 31/58: adrsp368.wav\n",
+            "      Processing 32/58: adrsp032.wav\n",
+            "      Processing 33/58: adrsp091.wav\n",
+            "      Processing 34/58: adrsp344.wav\n",
+            "      Processing 35/58: adrsp124.wav\n",
+            "      Processing 36/58: adrsp195.wav\n",
+            "      Processing 37/58: adrsp253.wav\n",
+            "      Processing 38/58: adrsp251.wav\n",
+            "      Processing 39/58: adrsp039.wav\n",
+            "      Processing 40/58: adrsp001.wav\n",
+            "      Processing 41/58: adrsp041.wav\n",
+            "      Processing 42/58: adrsp384.wav\n",
+            "      Processing 43/58: adrsp207.wav\n",
+            "      Processing 44/58: adrsp379.wav\n",
+            "      Processing 45/58: adrsp324.wav\n",
+            "      Processing 46/58: adrsp177.wav\n",
+            "      Processing 47/58: adrsp148.wav\n",
+            "      Processing 48/58: adrsp023.wav\n",
+            "      Processing 49/58: adrsp359.wav\n",
+            "      Processing 50/58: adrsp122.wav\n",
+            "      Processing 51/58: adrsp200.wav\n",
+            "      Processing 52/58: adrsp030.wav\n",
+            "      Processing 53/58: adrsp319.wav\n",
+            "      Processing 54/58: adrsp378.wav\n",
+            "      Processing 55/58: adrsp193.wav\n",
+            "      Processing 56/58: adrsp128.wav\n",
+            "      Processing 57/58: adrsp161.wav\n",
+            "      Processing 58/58: adrsp192.wav\n",
+            "\n",
+            "  Processing progression test data...\n",
+            "    Processing 32 test files...\n",
+            "      Processing 1/32: adrspt20.wav\n",
+            "      Processing 2/32: adrspt15.wav\n",
+            "      Processing 3/32: adrspt4.wav\n",
+            "      Processing 4/32: adrspt28.wav\n",
+            "      Processing 5/32: adrspt16.wav\n",
+            "      Processing 6/32: adrspt27.wav\n",
+            "      Processing 7/32: adrspt9.wav\n",
+            "      Processing 8/32: adrspt10.wav\n",
+            "      Processing 9/32: adrspt13.wav\n",
+            "      Processing 10/32: adrspt26.wav\n",
+            "      Processing 11/32: adrspt23.wav\n",
+            "      Processing 12/32: adrspt31.wav\n",
+            "      Processing 13/32: adrspt14.wav\n",
+            "      Processing 14/32: adrspt6.wav\n",
+            "      Processing 15/32: adrspt12.wav\n",
+            "      Processing 16/32: adrspt32.wav\n",
+            "      Processing 17/32: adrspt21.wav\n",
+            "      Processing 18/32: adrspt1.wav\n",
+            "      Processing 19/32: adrspt29.wav\n",
+            "      Processing 20/32: adrspt30.wav\n",
+            "      Processing 21/32: adrspt3.wav\n",
+            "      Processing 22/32: adrspt8.wav\n",
+            "      Processing 23/32: adrspt19.wav\n",
+            "      Processing 24/32: adrspt18.wav\n",
+            "      Processing 25/32: adrspt25.wav\n",
+            "      Processing 26/32: adrspt2.wav\n",
+            "      Processing 27/32: adrspt24.wav\n",
+            "      Processing 28/32: adrspt11.wav\n",
+            "      Processing 29/32: adrspt17.wav\n",
+            "      Processing 30/32: adrspt22.wav\n",
+            "      Processing 31/32: adrspt7.wav\n",
+            "      Processing 32/32: adrspt5.wav\n",
+            "\n",
+            "  Processing diagnosis training data...\n",
+            "    Processing 87 ad files...\n",
+            "      Processing 1/87: adrso047.wav\n",
+            "      Processing 2/87: adrso128.wav\n",
+            "      Processing 3/87: adrso045.wav\n",
+            "      Processing 4/87: adrso110.wav\n",
+            "      Processing 5/87: adrso036.wav\n",
+            "      Processing 6/87: adrso189.wav\n",
+            "      Processing 7/87: adrso093.wav\n",
+            "      Processing 8/87: adrso112.wav\n",
+            "      Processing 9/87: adrso205.wav\n",
+            "      Processing 10/87: adrso089.wav\n",
+            "      Processing 11/87: adrso060.wav\n",
+            "      Processing 12/87: adrso232.wav\n",
+            "      Processing 13/87: adrso075.wav\n",
+            "      Processing 14/87: adrso063.wav\n",
+            "      Processing 15/87: adrso106.wav\n",
+            "      Processing 16/87: adrso202.wav\n",
+            "      Processing 17/87: adrso043.wav\n",
+            "      Processing 18/87: adrso206.wav\n",
+            "      Processing 19/87: adrso039.wav\n",
+            "      Processing 20/87: adrso109.wav\n",
+            "      Processing 21/87: adrso126.wav\n",
+            "      Processing 22/87: adrso071.wav\n",
+            "      Processing 23/87: adrso209.wav\n",
+            "      Processing 24/87: adrso244.wav\n",
+            "      Processing 25/87: adrso228.wav\n",
+            "      Processing 26/87: adrso122.wav\n",
+            "      Processing 27/87: adrso116.wav\n",
+            "      Processing 28/87: adrso141.wav\n",
+            "      Processing 29/87: adrso130.wav\n",
+            "      Processing 30/87: adrso248.wav\n",
+            "      Processing 31/87: adrso070.wav\n",
+            "      Processing 32/87: adrso055.wav\n",
+            "      Processing 33/87: adrso222.wav\n",
+            "      Processing 34/87: adrso190.wav\n",
+            "      Processing 35/87: adrso215.wav\n",
+            "      Processing 36/87: adrso223.wav\n",
+            "      Processing 37/87: adrso192.wav\n",
+            "      Processing 38/87: adrso236.wav\n",
+            "      Processing 39/87: adrso234.wav\n",
+            "      Processing 40/87: adrso059.wav\n",
+            "      Processing 41/87: adrso098.wav\n",
+            "      Processing 42/87: adrso090.wav\n",
+            "      Processing 43/87: adrso250.wav\n",
+            "      Processing 44/87: adrso025.wav\n",
+            "      Processing 45/87: adrso031.wav\n",
+            "      Processing 46/87: adrso197.wav\n",
+            "      Processing 47/87: adrso224.wav\n",
+            "      Processing 48/87: adrso074.wav\n",
+            "      Processing 49/87: adrso049.wav\n",
+            "      Processing 50/87: adrso211.wav\n",
+            "      Processing 51/87: adrso229.wav\n",
+            "      Processing 52/87: adrso138.wav\n",
+            "      Processing 53/87: adrso123.wav\n",
+            "      Processing 54/87: adrso027.wav\n",
+            "      Processing 55/87: adrso072.wav\n",
+            "      Processing 56/87: adrso056.wav\n",
+            "      Processing 57/87: adrso068.wav\n",
+            "      Processing 58/87: adrso054.wav\n",
+            "      Processing 59/87: adrso187.wav\n",
+            "      Processing 60/87: adrso078.wav\n",
+            "      Processing 61/87: adrso053.wav\n",
+            "      Processing 62/87: adrso200.wav\n",
+            "      Processing 63/87: adrso249.wav\n",
+            "      Processing 64/87: adrso028.wav\n",
+            "      Processing 65/87: adrso245.wav\n",
+            "      Processing 66/87: adrso216.wav\n",
+            "      Processing 67/87: adrso092.wav\n",
+            "      Processing 68/87: adrso220.wav\n",
+            "      Processing 69/87: adrso134.wav\n",
+            "      Processing 70/87: adrso142.wav\n",
+            "      Processing 71/87: adrso198.wav\n",
+            "      Processing 72/87: adrso077.wav\n",
+            "      Processing 73/87: adrso024.wav\n",
+            "      Processing 74/87: adrso212.wav\n",
+            "      Processing 75/87: adrso046.wav\n",
+            "      Processing 76/87: adrso035.wav\n",
+            "      Processing 77/87: adrso233.wav\n",
+            "      Processing 78/87: adrso247.wav\n",
+            "      Processing 79/87: adrso033.wav\n",
+            "      Processing 80/87: adrso125.wav\n",
+            "      Processing 81/87: adrso188.wav\n",
+            "      Processing 82/87: adrso237.wav\n",
+            "      Processing 83/87: adrso032.wav\n",
+            "      Processing 84/87: adrso253.wav\n",
+            "      Processing 85/87: adrso218.wav\n",
+            "      Processing 86/87: adrso144.wav\n",
+            "      Processing 87/87: adrso246.wav\n",
+            "    Processing 79 cn files...\n",
+            "      Processing 1/79: adrso173.wav\n",
+            "      Processing 2/79: adrso015.wav\n",
+            "      Processing 3/79: adrso307.wav\n",
+            "      Processing 4/79: adrso283.wav\n",
+            "      Processing 5/79: adrso167.wav\n",
+            "      Processing 6/79: adrso168.wav\n",
+            "      Processing 7/79: adrso172.wav\n",
+            "      Processing 8/79: adrso292.wav\n",
+            "      Processing 9/79: adrso316.wav\n",
+            "      Processing 10/79: adrso162.wav\n",
+            "      Processing 11/79: adrso296.wav\n",
+            "      Processing 12/79: adrso278.wav\n",
+            "      Processing 13/79: adrso300.wav\n",
+            "      Processing 14/79: adrso291.wav\n",
+            "      Processing 15/79: adrso169.wav\n",
+            "      Processing 16/79: adrso178.wav\n",
+            "      Processing 17/79: adrso165.wav\n",
+            "      Processing 18/79: adrso262.wav\n",
+            "      Processing 19/79: adrso177.wav\n",
+            "      Processing 20/79: adrso265.wav\n",
+            "      Processing 21/79: adrso014.wav\n",
+            "      Processing 22/79: adrso261.wav\n",
+            "      Processing 23/79: adrso268.wav\n",
+            "      Processing 24/79: adrso021.wav\n",
+            "      Processing 25/79: adrso156.wav\n",
+            "      Processing 26/79: adrso310.wav\n",
+            "      Processing 27/79: adrso016.wav\n",
+            "      Processing 28/79: adrso148.wav\n",
+            "      Processing 29/79: adrso302.wav\n",
+            "      Processing 30/79: adrso308.wav\n",
+            "      Processing 31/79: adrso018.wav\n",
+            "      Processing 32/79: adrso309.wav\n",
+            "      Processing 33/79: adrso180.wav\n",
+            "      Processing 34/79: adrso298.wav\n",
+            "      Processing 35/79: adrso154.wav\n",
+            "      Processing 36/79: adrso273.wav\n",
+            "      Processing 37/79: adrso259.wav\n",
+            "      Processing 38/79: adrso151.wav\n",
+            "      Processing 39/79: adrso159.wav\n",
+            "      Processing 40/79: adrso267.wav\n",
+            "      Processing 41/79: adrso274.wav\n",
+            "      Processing 42/79: adrso019.wav\n",
+            "      Processing 43/79: adrso153.wav\n",
+            "      Processing 44/79: adrso023.wav\n",
+            "      Processing 45/79: adrso012.wav\n",
+            "      Processing 46/79: adrso280.wav\n",
+            "      Processing 47/79: adrso002.wav\n",
+            "      Processing 48/79: adrso266.wav\n",
+            "      Processing 49/79: adrso022.wav\n",
+            "      Processing 50/79: adrso007.wav\n",
+            "      Processing 51/79: adrso152.wav\n",
+            "      Processing 52/79: adrso276.wav\n",
+            "      Processing 53/79: adrso260.wav\n",
+            "      Processing 54/79: adrso005.wav\n",
+            "      Processing 55/79: adrso017.wav\n",
+            "      Processing 56/79: adrso299.wav\n",
+            "      Processing 57/79: adrso157.wav\n",
+            "      Processing 58/79: adrso182.wav\n",
+            "      Processing 59/79: adrso008.wav\n",
+            "      Processing 60/79: adrso161.wav\n",
+            "      Processing 61/79: adrso263.wav\n",
+            "      Processing 62/79: adrso257.wav\n",
+            "      Processing 63/79: adrso164.wav\n",
+            "      Processing 64/79: adrso270.wav\n",
+            "      Processing 65/79: adrso289.wav\n",
+            "      Processing 66/79: adrso264.wav\n",
+            "      Processing 67/79: adrso277.wav\n",
+            "      Processing 68/79: adrso160.wav\n",
+            "      Processing 69/79: adrso286.wav\n",
+            "      Processing 70/79: adrso003.wav\n",
+            "      Processing 71/79: adrso186.wav\n",
+            "      Processing 72/79: adrso285.wav\n",
+            "      Processing 73/79: adrso170.wav\n",
+            "      Processing 74/79: adrso183.wav\n",
+            "      Processing 75/79: adrso281.wav\n",
+            "      Processing 76/79: adrso315.wav\n",
+            "      Processing 77/79: adrso010.wav\n",
+            "      Processing 78/79: adrso312.wav\n",
+            "      Processing 79/79: adrso158.wav\n",
+            "\n",
+            "STEP 9: Saving transcription results...\n",
+            "✓ Saved complete results to: /content/drive/MyDrive/Voice/transcripts/all_transcripts.csv\n",
+            "✓ Saved successful transcripts to: /content/drive/MyDrive/Voice/transcripts/successful_transcripts.csv\n",
+            "✓ Saved progression_train transcripts to: /content/drive/MyDrive/Voice/transcripts/progression_train_transcripts.csv\n",
+            "✓ Saved progression_test transcripts to: /content/drive/MyDrive/Voice/transcripts/progression_test_transcripts.csv\n",
+            "✓ Saved diagnosis_train transcripts to: /content/drive/MyDrive/Voice/transcripts/diagnosis_train_transcripts.csv\n",
+            "\n",
+            "STEP 10: Summary Statistics\n",
+            "==================================================\n",
+            "Total audio files processed: 271\n",
+            "Successful transcriptions: 155 (57.2%)\n",
+            "Failed transcriptions: 116 (42.8%)\n",
+            "\n",
+            "Dataset breakdown:\n",
+            "  progression_train: 42/73 successful (57.5%)\n",
+            "  progression_test: 16/32 successful (50.0%)\n",
+            "  diagnosis_train: 97/166 successful (58.4%)\n",
+            "\n",
+            "Label distribution (successful transcripts only):\n",
+            "label\n",
+            "ad            51\n",
+            "cn            46\n",
+            "no_decline    34\n",
+            "test          16\n",
+            "decline        8\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Recognition methods used:\n",
+            "recognition_method\n",
+            "google    155\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Sample successful transcripts:\n",
+            "  Sample 1: you can start now...\n",
+            "  Sample 2: is in 1 minute time I want you to name as many...\n",
+            "  Sample 3: cat dog giraffe...\n",
+            "\n",
+            "Most common errors:\n",
+            "  Google Speech Recognition could not understand audio; Sphinx error: missing PocketSphinx module: ensure that PocketSphinx is set up correctly.: 116 files\n",
+            "\n",
+            "============================================================\n",
+            "TRANSCRIPT EXTRACTION COMPLETE!\n",
+            "All results saved in: /content/drive/MyDrive/Voice/transcripts/\n",
+            "============================================================\n"
           ]
         }
       ]
