COMPREHENSIVE AD CLASSIFICATION PIPELINE Audio Features + BERT + DARTS Architecture

--- a/ADReSSo21.ipynb
+++ b/ADReSSo21.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNS1paEeH0I/oethSoEtFVI",
+      "authorship_tag": "ABX9TyPj81/UtefV1XB37Wl9hxFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1507,7 +1507,7 @@
         "    return train_losses, val_losses, val_accuracies\n",
         "\n",
         "def evaluate_model(model, test_loader, class_names=['Control', 'AD']):\n",
-        "    \"\"\"Evaluate the trained model\"\"\"\n",
+        "    \"\"\"Evaluate the trained model and return comprehensive metrics\"\"\"\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "    model.eval()\n",
         "\n",
@@ -1543,8 +1543,36 @@
         "    # Confusion matrix\n",
         "    cm = confusion_matrix(all_labels, all_predictions)\n",
         "\n",
+        "    # Print results\n",
         "    print(\"=\"*50)\n",
-        "    print(\"MODEL EVALUATION\")"
+        "    print(\"MODEL EVALUATION RESULTS\")\n",
+        "    print(\"=\"*50)\n",
+        "    print(f\"Accuracy: {accuracy:.4f} ({accuracy*100:.2f}%)\")\n",
+        "    print(f\"AUC Score: {auc_score:.4f}\")\n",
+        "    print(\"\\nClassification Report:\")\n",
+        "    print(report)\n",
+        "    print(\"\\nConfusion Matrix:\")\n",
+        "    print(cm)\n",
+        "\n",
+        "    # Plot confusion matrix\n",
+        "    plt.figure(figsize=(8, 6))\n",
+        "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues',\n",
+        "                xticklabels=class_names, yticklabels=class_names)\n",
+        "    plt.title('Confusion Matrix')\n",
+        "    plt.xlabel('Predicted')\n",
+        "    plt.ylabel('Actual')\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Return metrics for further analysis\n",
+        "    return {\n",
+        "        'accuracy': accuracy,\n",
+        "        'auc_score': auc_score,\n",
+        "        'predictions': all_predictions,\n",
+        "        'labels': all_labels,\n",
+        "        'probabilities': all_probabilities,\n",
+        "        'confusion_matrix': cm,\n",
+        "        'classification_report': report\n",
+        "    }"
       ],
       "metadata": {
         "colab": {
