try to added code

--- a/ADReSSo21.ipynb
+++ b/ADReSSo21.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPj81/UtefV1XB37Wl9hxFE",
+      "authorship_tag": "ABX9TyOy2t3sXyaBHIuhrJ8LPFM+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -861,8 +861,32 @@
         "print(\"=\"*80)\n",
         "print(\"COMPREHENSIVE AD CLASSIFICATION PIPELINE\")\n",
         "print(\"Audio Features + BERT + DARTS Architecture\")\n",
-        "print(\"=\"*80)\n",
-        "\n",
+        "print(\"=\"*80)"
+      ],
+      "metadata": {
+        "id": "IuuPR--FzKPd",
+        "outputId": "037d4448-81b7-4c6a-cdfa-6ed596332a90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "================================================================================\n",
+            "COMPREHENSIVE AD CLASSIFICATION PIPELINE\n",
+            "Audio Features + BERT + DARTS Architecture\n",
+            "================================================================================\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ============================================================================\n",
         "# PART 1: ADVANCED AUDIO FEATURE EXTRACTION\n",
         "# ============================================================================\n",
@@ -1041,7 +1065,17 @@
         "            else:\n",
         "                flattened_features[key] = value\n",
         "\n",
-        "        return flattened_features, mfcc_matrix\n",
+        "        return flattened_features, mfcc_matrix\n"
+      ],
+      "metadata": {
+        "id": "2bTxcZLizRWu"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "# ============================================================================\n",
         "# PART 2: BERT TEXT PROCESSING\n",
@@ -1144,7 +1178,17 @@
         "            print(f\"Error extracting linguistic features: {e}\")\n",
         "            return {'word_count': 0, 'char_count': 0, 'avg_word_length': 0,\n",
         "                   'sentence_count': 0, 'question_count': 0, 'exclamation_count': 0}\n",
-        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZRNEytjwzVGs"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ============================================================================\n",
         "# PART 3: IMPROVED DARTS ARCHITECTURE\n",
         "# ============================================================================\n",
@@ -1319,8 +1363,17 @@
         "                'temperature': cell.temperature.item()\n",
         "            }\n",
         "\n",
-        "        return arch_info\n",
-        "\n",
+        "        return arch_info\n"
+      ],
+      "metadata": {
+        "id": "xlcNZpa1zZVJ"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ============================================================================\n",
         "# PART 4: DATASET AND TRAINING UTILITIES\n",
         "# ============================================================================\n",
@@ -1575,25 +1628,10 @@
         "    }"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2SgZdh7FonhH",
-        "outputId": "a96b3dab-e86a-4e72-a871-f8a2d45c4c5e"
+        "id": "2SgZdh7FonhH"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "================================================================================\n",
-            "COMPREHENSIVE AD CLASSIFICATION PIPELINE\n",
-            "Audio Features + BERT + DARTS Architecture\n",
-            "================================================================================\n"
-          ]
-        }
-      ]
+      "execution_count": 10,
+      "outputs": []
     }
   ]
 }
