extract tgz files

--- a/ADReSSo21.ipynb
+++ b/ADReSSo21.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOa/3kB2wiUzswBN0WHHPJh",
+      "authorship_tag": "ABX9TyP9CxnX288hY/mBLmDpbYlg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1749,11 +1749,11 @@
         "!echo \"✓ Packages ready (make sure to install them first)\""
       ],
       "metadata": {
-        "id": "uYSdRXcS1cTy",
-        "outputId": "463143bb-6716-4c7c-cb5e-c9be13711a45",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uYSdRXcS1cTy",
+        "outputId": "463143bb-6716-4c7c-cb5e-c9be13711a45"
       },
       "execution_count": 2,
       "outputs": [
@@ -1832,11 +1832,11 @@
         "print(\"=\"*60)"
       ],
       "metadata": {
-        "id": "Ubz5vWb71EfF",
-        "outputId": "0a1a8aaa-9dbd-4380-ab3e-c7c2a63137c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ubz5vWb71EfF",
+        "outputId": "0a1a8aaa-9dbd-4380-ab3e-c7c2a63137c0"
       },
       "execution_count": 3,
       "outputs": [
@@ -1863,11 +1863,11 @@
         "    print(\"⚠ Not running in Colab or Drive already mounted\")"
       ],
       "metadata": {
-        "id": "9FhGrZuw1njg",
-        "outputId": "f251104b-9faf-443e-b8d6-733d46f1ca23",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9FhGrZuw1njg",
+        "outputId": "f251104b-9faf-443e-b8d6-733d46f1ca23"
       },
       "execution_count": 6,
       "outputs": [
@@ -1879,6 +1879,94 @@
             "STEP 1: Mounting Google Drive...\n",
             "Mounted at /content/drive\n",
             "✓ Google Drive mounted successfully!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\nSTEP 3: Setting up paths and configuration...\")\n",
+        "\n",
+        "BASE_PATH = \"/content/drive/MyDrive/Voice/\"\n",
+        "EXTRACT_PATH = \"/content/drive/MyDrive/Voice/extracted/\"\n",
+        "OUTPUT_PATH = \"/content/drive/MyDrive/Voice/transcripts/\"\n",
+        "\n",
+        "# Create directories\n",
+        "os.makedirs(EXTRACT_PATH, exist_ok=True)\n",
+        "os.makedirs(OUTPUT_PATH, exist_ok=True)\n",
+        "\n",
+        "datasets = {\n",
+        "    'progression_train': 'ADReSSo21-progression-train.tgz',\n",
+        "    'progression_test': 'ADReSSo21-progression-test.tgz',\n",
+        "    'diagnosis_train': 'ADReSSo21-diagnosis-train.tgz'\n",
+        "}\n",
+        "\n",
+        "print(f\"✓ Base path: {BASE_PATH}\")\n",
+        "print(f\"✓ Extract path: {EXTRACT_PATH}\")\n",
+        "print(f\"✓ Output path: {OUTPUT_PATH}\")"
+      ],
+      "metadata": {
+        "id": "oD_1lR1w2dSN",
+        "outputId": "cc907128-e336-4c3e-8de3-c2581b5673c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "STEP 3: Setting up paths and configuration...\n",
+            "✓ Base path: /content/drive/MyDrive/Voice/\n",
+            "✓ Extract path: /content/drive/MyDrive/Voice/extracted/\n",
+            "✓ Output path: /content/drive/MyDrive/Voice/transcripts/\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\nSTEP 4: Extracting dataset files...\")\n",
+        "\n",
+        "def extract_datasets():\n",
+        "    \"\"\"Extract all tgz files\"\"\"\n",
+        "    for dataset_name, filename in datasets.items():\n",
+        "        file_path = os.path.join(BASE_PATH, filename)\n",
+        "\n",
+        "        if os.path.exists(file_path):\n",
+        "            print(f\"  Extracting {filename}...\")\n",
+        "            try:\n",
+        "                with tarfile.open(file_path, 'r:gz') as tar:\n",
+        "                    tar.extractall(path=EXTRACT_PATH)\n",
+        "                print(f\"  ✓ {filename} extracted successfully\")\n",
+        "            except Exception as e:\n",
+        "                print(f\"  ⚠ Error extracting {filename}: {e}\")\n",
+        "        else:\n",
+        "            print(f\"  ⚠ {filename} not found at {file_path}\")\n",
+        "\n",
+        "extract_datasets()"
+      ],
+      "metadata": {
+        "id": "J8sWcFQJ2lLq",
+        "outputId": "f7bd4cf5-e471-4746-9baa-815f8d14ab0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "STEP 4: Extracting dataset files...\n",
+            "  Extracting ADReSSo21-progression-train.tgz...\n"
           ]
         }
       ]
