--- a/Dementia_Detection.ipynb
+++ b/Dementia_Detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKG6qZT+NkowECQAUaR9if",
+      "authorship_tag": "ABX9TyMyHsJHKBymORFmzmw8KSXp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "mb8c6oC9R01c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mb8c6oC9R01c",
+        "outputId": "22ff430c-7152-4d05-fb4d-d4bbe0a81014"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     }
   ]
 }
